model(log): add confusion matrix function and test class_weights for models

--- a/notebooks/024_MODEL_logistic_classifiers.ipynb
+++ b/notebooks/024_MODEL_logistic_classifiers.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,7 @@
     "\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -567,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +601,18 @@
     "    for i in pred_counts_test:\n",
     "        print(\n",
     "            '{}\\t{:.4f}\\t\\t{:,}'.format(int(i[0]), i[2], int(i[1]))\n",
-    "        )"
+    "        )\n",
+    "        \n",
+    "def make_conf_matrix(pred_classes, act_classes, class_cats=np.arange(0,9)):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    conf_matrix = pd.DataFrame(confusion_matrix(pred_classes, act_classes), columns=np.arange(0,9))\n",
+    "    conf_matrix.index.name = 'Predicted'\n",
+    "    conf_matrix.columns.name = 'Actual'\n",
+    "    conf_matrix.loc['Total'] = conf_matrix.sum(axis=0)\n",
+    "    conf_matrix['Total'] = conf_matrix.sum(axis=1)\n",
+    "    \n",
+    "    return conf_matrix"
    ]
   },
   {
@@ -664,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -681,12 +693,204 @@
       "TEST\n",
       "Class\tProportion\tPredictions\n",
       "4\t0.1228\t\t3,939\n",
-      "6\t0.8772\t\t28,149\n"
+      "6\t0.8772\t\t28,149\n",
+      "\n",
+      "\n",
+      "The training and test confusion matrices for the model are:\n",
+      "\n",
+      "TRAINING\n",
+      "\n",
+      "Actual        0     1      2     3      4     5      6      7      8   Total\n",
+      "Predicted                                                                   \n",
+      "0             0     0      0     0      0     0      0      0      0       0\n",
+      "1             0     0      0     0      0     0      0      0      0       0\n",
+      "2             0     0      0     0      0     0      0      0      0       0\n",
+      "3             0     0      0     0      0     0      0      0      0       0\n",
+      "4           476   755   1420  1491   3477   370   3300   1827   2330   15446\n",
+      "5             0     0      0     0      0     0      0      0      0       0\n",
+      "6          5845  4909  11662  8096  17290  3053  31255  11883  18913  112906\n",
+      "7             0     0      0     0      0     0      0      0      0       0\n",
+      "8             0     0      0     0      0     0      0      0      0       0\n",
+      "Total      6321  5664  13082  9587  20767  3423  34555  13710  21243  128352\n",
+      "\n",
+      "\n",
+      "TEST\n",
+      "\n",
+      "Actual        0     1     2     3     4    5     6     7     8  Total\n",
+      "Predicted                                                            \n",
+      "0             0     0     0     0     0    0     0     0     0      0\n",
+      "1             0     0     0     0     0    0     0     0     0      0\n",
+      "2             0     0     0     0     0    0     0     0     0      0\n",
+      "3             0     0     0     0     0    0     0     0     0      0\n",
+      "4           127   154   329   357   954  105   824   458   631   3939\n",
+      "5             0     0     0     0     0    0     0     0     0      0\n",
+      "6          1453  1262  2942  2040  4238  751  7815  2969  4679  28149\n",
+      "7             0     0     0     0     0    0     0     0     0      0\n",
+      "8             0     0     0     0     0    0     0     0     0      0\n",
+      "Total      1580  1416  3271  2397  5192  856  8639  3427  5310  32088\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "summarize_predictions(mnloglocs_pred_train, mnloglocs_pred_test)"
+    "summarize_predictions(mnloglocs_pred_train, mnloglocs_pred_test)\n",
+    "print('\\n')\n",
+    "mnloglocs_cmat_train = make_conf_matrix(mnloglocs_pred_train, y_train)\n",
+    "mnloglocs_cmat_test = make_conf_matrix(mnloglocs_pred_test, y_test)\n",
+    "print(\n",
+    "    'The training and test confusion matrices for the model are:\\n\\n'\\\n",
+    "    'TRAINING\\n\\n{}\\n\\n\\nTEST\\n\\n{}\\n'.format(\n",
+    "        mnloglocs_cmat_train,\n",
+    "        mnloglocs_cmat_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=100000, class_weight='balanced', dual=False,\n",
+      "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+      "                   max_iter=1000, multi_class='multinomial', n_jobs=None,\n",
+      "                   penalty='l2', random_state=20, solver='lbfgs', tol=0.0001,\n",
+      "                   verbose=0, warm_start=False)\n",
+      "\n",
+      "The resulting training and test accuracy scores are:\n",
+      "\n",
+      "Training\t0.1295\n",
+      "TEST\t\t0.1332\n",
+      "\n",
+      "CPU times: user 2.56 s, sys: 31.9 ms, total: 2.59 s\n",
+      "Wall time: 690 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "solver = 'lbfgs'\n",
+    "C = 100000\n",
+    "max_iter = 1000\n",
+    "class_weight = 'balanced'\n",
+    "\n",
+    "# fit a model again as multinomial for comparison of results\n",
+    "multi_class='multinomial'\n",
+    "\n",
+    "MNLogLocsBal = LogisticRegression(\n",
+    "    C=C,\n",
+    "    solver=solver,\n",
+    "    max_iter=max_iter,\n",
+    "    multi_class=multi_class,\n",
+    "    random_state=20,\n",
+    "    class_weight = class_weight\n",
+    ").fit(X_train[['lat', 'lon']], y_train)\n",
+    "\n",
+    "mnloglocsbal_score_train = MNLogLocsBal.score(X_train[['lat', 'lon']], y_train)\n",
+    "mnloglocsbal_score_test = MNLogLocsBal.score(X_test[['lat', 'lon']], y_test)\n",
+    "mnloglocsbal_pred_train = MNLogLocsBal.predict(X_train[['lat', 'lon']])\n",
+    "mnloglocsbal_pred_test = MNLogLocsBal.predict(X_test[['lat', 'lon']])\n",
+    "\n",
+    "print(MNLogLocsBal)\n",
+    "print()\n",
+    "print(\n",
+    "    'The resulting training and test accuracy scores are:\\n\\n'\\\n",
+    "    'Training\\t{0:.4f}\\nTEST\\t\\t{1:.4f}\\n'.format(\n",
+    "        mnloglocsbal_score_train,\n",
+    "        mnloglocsbal_score_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of classes predicted by class for both the training and test sets are:\n",
+      "\n",
+      "TRAINING\n",
+      "Class\tProportion\tPredictions\n",
+      "0\t0.4195\t\t53,841\n",
+      "1\t0.0519\t\t6,662\n",
+      "2\t0.0124\t\t1,595\n",
+      "3\t0.0173\t\t2,222\n",
+      "4\t0.4109\t\t52,740\n",
+      "5\t0.0247\t\t3,164\n",
+      "6\t0.0302\t\t3,877\n",
+      "7\t0.0143\t\t1,837\n",
+      "8\t0.0188\t\t2,414\n",
+      "\n",
+      "TEST\n",
+      "Class\tProportion\tPredictions\n",
+      "0\t0.4200\t\t13,476\n",
+      "1\t0.0506\t\t1,624\n",
+      "2\t0.0132\t\t423\n",
+      "3\t0.0164\t\t527\n",
+      "4\t0.4149\t\t13,313\n",
+      "5\t0.0238\t\t763\n",
+      "6\t0.0300\t\t964\n",
+      "7\t0.0127\t\t409\n",
+      "8\t0.0184\t\t589\n",
+      "\n",
+      "\n",
+      "The training and test confusion matrices for the model are:\n",
+      "\n",
+      "TRAINING\n",
+      "\n",
+      "Actual        0     1      2     3      4     5      6      7      8   Total\n",
+      "Predicted                                                                   \n",
+      "0          2831  1967   6154  4162   5191  1446  18601   5039   8450   53841\n",
+      "1           377   399    386   459   1427   210   1499    740   1165    6662\n",
+      "2           101    83     96   107    289    37    422    178    282    1595\n",
+      "3           143   117    107   153    375    59    608    248    412    2222\n",
+      "4          1849  2577   4983  3996  11615  1388  10998   6359   8975   52740\n",
+      "5           209   140    519   180    483    68    695    326    544    3164\n",
+      "6           557   148    419   230    588   113    815    339    668    3877\n",
+      "7           104   109    104   127    381    45    438    214    315    1837\n",
+      "8           150   124    314   173    418    57    479    267    432    2414\n",
+      "Total      6321  5664  13082  9587  20767  3423  34555  13710  21243  128352\n",
+      "\n",
+      "\n",
+      "TEST\n",
+      "\n",
+      "Actual        0     1     2     3     4    5     6     7     8  Total\n",
+      "Predicted                                                            \n",
+      "0           697   479  1532  1088  1207  394  4715  1245  2119  13476\n",
+      "1           102    85    97    98   353   50   383   173   283   1624\n",
+      "2            21    21    27    30    85    6   120    46    67    423\n",
+      "3            29    24    24    28    99   16   125    73   109    527\n",
+      "4           525   675  1246   974  3041  320  2690  1572  2270  13313\n",
+      "5            41    46   122    51   101   25   155    79   143    763\n",
+      "6           114    32   112    62   133   25   222   100   164    964\n",
+      "7            16    30    30    25    79    8    88    64    69    409\n",
+      "8            35    24    81    41    94   12   141    75    86    589\n",
+      "Total      1580  1416  3271  2397  5192  856  8639  3427  5310  32088\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarize_predictions(mnloglocsbal_pred_train, mnloglocsbal_pred_test)\n",
+    "print('\\n')\n",
+    "mnloglocsbal_cmat_train = make_conf_matrix(mnloglocsbal_pred_train, y_train)\n",
+    "mnloglocsbal_cmat_test = make_conf_matrix(mnloglocsbal_pred_test, y_test)\n",
+    "print(\n",
+    "    'The training and test confusion matrices for the model are:\\n\\n'\\\n",
+    "    'TRAINING\\n\\n{}\\n\\n\\nTEST\\n\\n{}\\n'.format(\n",
+    "        mnloglocsbal_cmat_train,\n",
+    "        mnloglocsbal_cmat_test\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -884,10 +1088,308 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=100000, class_weight=None, dual=False, fit_intercept=True,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=1000,\n",
+      "                   multi_class='ovr', n_jobs=None, penalty='l2',\n",
+      "                   random_state=20, solver='lbfgs', tol=0.0001, verbose=0,\n",
+      "                   warm_start=False)\n",
+      "\n",
+      "The resulting training and test accuracy scores are:\n",
+      "\n",
+      "Training\t0.2595\n",
+      "TEST\t\t0.2599\n",
+      "\n",
+      "CPU times: user 15.1 s, sys: 152 ms, total: 15.3 s\n",
+      "Wall time: 3.84 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# redo baseline predictors\n",
+    "cols = list(X_train.columns)\n",
+    "\n",
+    "solver = 'lbfgs'\n",
+    "C = 100000\n",
+    "max_iter = 1000\n",
+    "\n",
+    "# fit a model again as multinomial for comparison of results\n",
+    "multi_class='ovr'\n",
+    "\n",
+    "OVRLogAll = LogisticRegression(\n",
+    "    C=C,\n",
+    "    solver=solver,\n",
+    "    max_iter=max_iter,\n",
+    "    multi_class=multi_class,\n",
+    "    random_state=20\n",
+    ").fit(X_train[cols], y_train)\n",
+    "\n",
+    "ovrlogall_score_train = OVRLogAll.score(X_train[cols], y_train)\n",
+    "ovrlogall_score_test = OVRLogAll.score(X_test[cols], y_test)\n",
+    "ovrlogall_pred_train = OVRLogAll.predict(X_train[cols])\n",
+    "ovrlogall_pred_test = OVRLogAll.predict(X_test[cols])\n",
+    "\n",
+    "print(OVRLogAll)\n",
+    "print()\n",
+    "print(\n",
+    "    'The resulting training and test accuracy scores are:\\n\\n'\\\n",
+    "    'Training\\t{0:.4f}\\nTEST\\t\\t{1:.4f}\\n'.format(\n",
+    "        ovrlogall_score_train,\n",
+    "        ovrlogall_score_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of classes predicted by class for both the training and test sets are:\n",
+      "\n",
+      "TRAINING\n",
+      "Class\tProportion\tPredictions\n",
+      "4\t0.0061\t\t788\n",
+      "6\t0.6801\t\t87,294\n",
+      "8\t0.3137\t\t40,270\n",
+      "\n",
+      "TEST\n",
+      "Class\tProportion\tPredictions\n",
+      "4\t0.0062\t\t198\n",
+      "6\t0.6841\t\t21,952\n",
+      "8\t0.3097\t\t9,938\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarize_predictions(ovrlogall_pred_train, ovrlogall_pred_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## MODEL 3: Fit a multi-class multiple Logistic regression model with LASSO (L1) regularization to the SCALED data and inspect results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=100000, class_weight='balanced', dual=False,\n",
+      "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+      "                   max_iter=1000, multi_class='multinomial', n_jobs=None,\n",
+      "                   penalty='l2', random_state=20, solver='lbfgs', tol=0.0001,\n",
+      "                   verbose=0, warm_start=False)\n",
+      "\n",
+      "The resulting training and test accuracy scores are:\n",
+      "\n",
+      "Training\t0.2009\n",
+      "TEST\t\t0.2026\n",
+      "\n",
+      "CPU times: user 5.43 s, sys: 72.1 ms, total: 5.5 s\n",
+      "Wall time: 1.66 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# redo baseline predictors\n",
+    "cols = list(X_train.columns)\n",
+    "\n",
+    "solver = 'lbfgs'\n",
+    "C = 100000\n",
+    "max_iter = 1000\n",
+    "class_weight = 'balanced'\n",
+    "\n",
+    "# fit a model again as multinomial for comparison of results\n",
+    "multi_class='multinomial'\n",
+    "\n",
+    "MNLogAllBal = LogisticRegression(\n",
+    "    C=C,\n",
+    "    solver=solver,\n",
+    "    max_iter=max_iter,\n",
+    "    multi_class=multi_class,\n",
+    "    random_state=20,\n",
+    "    class_weight=class_weight\n",
+    ").fit(X_train[cols], y_train)\n",
+    "\n",
+    "mnlogallbal_score_train = MNLogAllBal.score(X_train[cols], y_train)\n",
+    "mnlogallbal_score_test = MNLogAllBal.score(X_test[cols], y_test)\n",
+    "mnlogallbal_pred_train = MNLogAllBal.predict(X_train[cols])\n",
+    "mnlogallbal_pred_test = MNLogAllBal.predict(X_test[cols])\n",
+    "\n",
+    "print(MNLogAllBal)\n",
+    "print()\n",
+    "print(\n",
+    "    'The resulting training and test accuracy scores are:\\n\\n'\\\n",
+    "    'Training\\t{0:.4f}\\nTEST\\t\\t{1:.4f}\\n'.format(\n",
+    "        mnlogallbal_score_train,\n",
+    "        mnlogallbal_score_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of classes predicted by class for both the training and test sets are:\n",
+      "\n",
+      "TRAINING\n",
+      "Class\tProportion\tPredictions\n",
+      "0\t0.0696\t\t8,929\n",
+      "1\t0.1305\t\t16,755\n",
+      "3\t0.0991\t\t12,726\n",
+      "6\t0.6279\t\t80,591\n",
+      "7\t0.0729\t\t9,351\n",
+      "\n",
+      "TEST\n",
+      "Class\tProportion\tPredictions\n",
+      "0\t0.0684\t\t2,196\n",
+      "1\t0.1309\t\t4,199\n",
+      "3\t0.0986\t\t3,164\n",
+      "6\t0.6278\t\t20,144\n",
+      "7\t0.0743\t\t2,385\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarize_predictions(mnlogallbal_pred_train, mnlogallbal_pred_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=100000, class_weight='balanced', dual=False,\n",
+      "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+      "                   max_iter=1000, multi_class='ovr', n_jobs=None, penalty='l2',\n",
+      "                   random_state=20, solver='lbfgs', tol=0.0001, verbose=0,\n",
+      "                   warm_start=False)\n",
+      "\n",
+      "The resulting training and test accuracy scores are:\n",
+      "\n",
+      "Training\t0.2155\n",
+      "TEST\t\t0.2140\n",
+      "\n",
+      "CPU times: user 11.4 s, sys: 152 ms, total: 11.6 s\n",
+      "Wall time: 2.93 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# redo baseline predictors\n",
+    "cols = list(X_train.columns)\n",
+    "\n",
+    "solver = 'lbfgs'\n",
+    "C = 100000\n",
+    "max_iter = 1000\n",
+    "class_weight = 'balanced'\n",
+    "\n",
+    "# fit a model again as multinomial for comparison of results\n",
+    "multi_class='ovr'\n",
+    "\n",
+    "OVRLogAllBal = LogisticRegression(\n",
+    "    C=C,\n",
+    "    solver=solver,\n",
+    "    max_iter=max_iter,\n",
+    "    multi_class=multi_class,\n",
+    "    random_state=20,\n",
+    "    class_weight=class_weight\n",
+    ").fit(X_train[cols], y_train)\n",
+    "\n",
+    "ovrlogallbal_score_train = OVRLogAllBal.score(X_train[cols], y_train)\n",
+    "ovrlogallbal_score_test = OVRLogAllBal.score(X_test[cols], y_test)\n",
+    "ovrlogallbal_pred_train = OVRLogAllBal.predict(X_train[cols])\n",
+    "ovrlogallbal_pred_test = OVRLogAllBal.predict(X_test[cols])\n",
+    "\n",
+    "print(OVRLogAllBal)\n",
+    "print()\n",
+    "print(\n",
+    "    'The resulting training and test accuracy scores are:\\n\\n'\\\n",
+    "    'Training\\t{0:.4f}\\nTEST\\t\\t{1:.4f}\\n'.format(\n",
+    "        ovrlogallbal_score_train,\n",
+    "        ovrlogallbal_score_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of classes predicted by class for both the training and test sets are:\n",
+      "\n",
+      "TRAINING\n",
+      "Class\tProportion\tPredictions\n",
+      "0\t0.0540\t\t6,936\n",
+      "1\t0.0065\t\t835\n",
+      "2\t0.1210\t\t15,537\n",
+      "3\t0.0018\t\t231\n",
+      "4\t0.3870\t\t49,672\n",
+      "5\t0.0953\t\t12,230\n",
+      "6\t0.2830\t\t36,327\n",
+      "7\t0.0513\t\t6,584\n",
+      "\n",
+      "TEST\n",
+      "Class\tProportion\tPredictions\n",
+      "0\t0.0547\t\t1,755\n",
+      "1\t0.0065\t\t210\n",
+      "2\t0.1229\t\t3,944\n",
+      "3\t0.0017\t\t54\n",
+      "4\t0.3834\t\t12,304\n",
+      "5\t0.0936\t\t3,004\n",
+      "6\t0.2834\t\t9,095\n",
+      "7\t0.0537\t\t1,722\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarize_predictions(ovrlogallbal_pred_train, ovrlogallbal_pred_test)"
    ]
   },
   {
