model(log): begin adding conf matrix results to all model reporting

--- a/notebooks/024_MODEL_logistic_classifiers.ipynb
+++ b/notebooks/024_MODEL_logistic_classifiers.ipynb
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -766,8 +766,8 @@
       "Training\t0.1295\n",
       "TEST\t\t0.1332\n",
       "\n",
-      "CPU times: user 2.56 s, sys: 31.9 ms, total: 2.59 s\n",
-      "Wall time: 690 ms\n"
+      "CPU times: user 2.55 s, sys: 47.8 ms, total: 2.59 s\n",
+      "Wall time: 691 ms\n"
      ]
     }
    ],
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -920,8 +920,8 @@
       "Training\t0.2692\n",
       "TEST\t\t0.2692\n",
       "\n",
-      "CPU times: user 4.8 s, sys: 83.8 ms, total: 4.88 s\n",
-      "Wall time: 1.61 s\n"
+      "CPU times: user 4.88 s, sys: 39.9 ms, total: 4.92 s\n",
+      "Wall time: 1.63 s\n"
      ]
     }
    ],
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -992,12 +992,340 @@
       "\n",
       "TEST\n",
       "Class\tProportion\tPredictions\n",
-      "6\t1.0000\t\t32,088\n"
+      "6\t1.0000\t\t32,088\n",
+      "\n",
+      "\n",
+      "The training and test confusion matrices for the model are:\n",
+      "\n",
+      "TRAINING\n",
+      "\n",
+      "Actual        0     1      2     3      4     5      6      7      8   Total\n",
+      "Predicted                                                                   \n",
+      "0             0     0      0     0      0     0      0      0      0       0\n",
+      "1             0     0      0     0      0     0      0      0      0       0\n",
+      "2             0     0      0     0      0     0      0      0      0       0\n",
+      "3             0     0      0     0      0     0      0      0      0       0\n",
+      "4             0     0      0     0      0     0      0      0      0       0\n",
+      "5             0     0      0     0      0     0      0      0      0       0\n",
+      "6          6321  5664  13082  9587  20767  3423  34555  13710  21243  128352\n",
+      "7             0     0      0     0      0     0      0      0      0       0\n",
+      "8             0     0      0     0      0     0      0      0      0       0\n",
+      "Total      6321  5664  13082  9587  20767  3423  34555  13710  21243  128352\n",
+      "\n",
+      "\n",
+      "TEST\n",
+      "\n",
+      "Actual        0     1     2     3     4    5     6     7     8  Total\n",
+      "Predicted                                                            \n",
+      "0             0     0     0     0     0    0     0     0     0      0\n",
+      "1             0     0     0     0     0    0     0     0     0      0\n",
+      "2             0     0     0     0     0    0     0     0     0      0\n",
+      "3             0     0     0     0     0    0     0     0     0      0\n",
+      "4             0     0     0     0     0    0     0     0     0      0\n",
+      "5             0     0     0     0     0    0     0     0     0      0\n",
+      "6          1580  1416  3271  2397  5192  856  8639  3427  5310  32088\n",
+      "7             0     0     0     0     0    0     0     0     0      0\n",
+      "8             0     0     0     0     0    0     0     0     0      0\n",
+      "Total      1580  1416  3271  2397  5192  856  8639  3427  5310  32088\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "summarize_predictions(mnlogbase_pred_train, mnlogbase_pred_test)"
+    "summarize_predictions(mnlogbase_pred_train, mnlogbase_pred_test)\n",
+    "print('\\n')\n",
+    "mnlogbase_cmat_train = make_conf_matrix(mnlogbase_pred_train, y_train)\n",
+    "mnlogbase_cmat_test = make_conf_matrix(mnlogbase_pred_test, y_test)\n",
+    "print(\n",
+    "    'The training and test confusion matrices for the model are:\\n\\n'\\\n",
+    "    'TRAINING\\n\\n{}\\n\\n\\nTEST\\n\\n{}\\n'.format(\n",
+    "        mnlogbase_cmat_train,\n",
+    "        mnlogbase_cmat_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=100000, class_weight=None, dual=False, fit_intercept=True,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=1000,\n",
+      "                   multi_class='multinomial', n_jobs=None, penalty='l2',\n",
+      "                   random_state=20, solver='lbfgs', tol=0.0001, verbose=0,\n",
+      "                   warm_start=False)\n",
+      "\n",
+      "The resulting training and test accuracy scores are:\n",
+      "\n",
+      "Training\t0.2901\n",
+      "TEST\t\t0.2924\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "solver = 'lbfgs'\n",
+    "C = 100000\n",
+    "max_iter = 1000\n",
+    "\n",
+    "# fit a model again as multinomial for comparison of results\n",
+    "multi_class='multinomial'\n",
+    "\n",
+    "MNLogBaseScaled = LogisticRegression(\n",
+    "    C=C,\n",
+    "    solver=solver,\n",
+    "    max_iter=max_iter,\n",
+    "    multi_class=multi_class,\n",
+    "    random_state=20\n",
+    ").fit(X_train_scaled[cols], y_train)\n",
+    "\n",
+    "mnlogbasescaled_score_train = MNLogBaseScaled.score(X_train_scaled[cols], y_train)\n",
+    "mnlogbasescaled_score_test = MNLogBaseScaled.score(X_test_scaled[cols], y_test)\n",
+    "mnlogbasescaled_pred_train = MNLogBaseScaled.predict(X_train_scaled[cols])\n",
+    "mnlogbasescaled_pred_test = MNLogBaseScaled.predict(X_test_scaled[cols])\n",
+    "\n",
+    "print(MNLogBaseScaled)\n",
+    "print()\n",
+    "print(\n",
+    "    'The resulting training and test accuracy scores are:\\n\\n'\\\n",
+    "    'Training\\t{0:.4f}\\nTEST\\t\\t{1:.4f}\\n'.format(\n",
+    "        mnlogbasescaled_score_train,\n",
+    "        mnlogbasescaled_score_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of classes predicted by class for both the training and test sets are:\n",
+      "\n",
+      "TRAINING\n",
+      "Class\tProportion\tPredictions\n",
+      "2\t0.0142\t\t1,823\n",
+      "3\t0.0002\t\t31\n",
+      "4\t0.3011\t\t38,646\n",
+      "6\t0.6669\t\t85,594\n",
+      "8\t0.0176\t\t2,258\n",
+      "\n",
+      "TEST\n",
+      "Class\tProportion\tPredictions\n",
+      "2\t0.0141\t\t451\n",
+      "3\t0.0002\t\t8\n",
+      "4\t0.3048\t\t9,782\n",
+      "6\t0.6638\t\t21,299\n",
+      "8\t0.0171\t\t548\n",
+      "\n",
+      "\n",
+      "The training and test confusion matrices for the model are:\n",
+      "\n",
+      "TRAINING\n",
+      "\n",
+      "Actual        0     1      2     3      4     5      6      7      8   Total\n",
+      "Predicted                                                                   \n",
+      "0             0     0      0     0      0     0      0      0      0       0\n",
+      "1             0     0      0     0      0     0      0      0      0       0\n",
+      "2            53    90    502   130    148    58    463    168    211    1823\n",
+      "3             0     3      2     9      3     1     11      1      1      31\n",
+      "4          1367  1694   3281  2616   9656  1130   7074   4751   7077   38646\n",
+      "5             0     0      0     0      0     0      0      0      0       0\n",
+      "6          4691  3801   9050  6695  10569  2158  26611   8526  13493   85594\n",
+      "7             0     0      0     0      0     0      0      0      0       0\n",
+      "8           210    76    247   137    391    76    396    264    461    2258\n",
+      "Total      6321  5664  13082  9587  20767  3423  34555  13710  21243  128352\n",
+      "\n",
+      "\n",
+      "TEST\n",
+      "\n",
+      "Actual        0     1     2     3     4    5     6     7     8  Total\n",
+      "Predicted                                                            \n",
+      "0             0     0     0     0     0    0     0     0     0      0\n",
+      "1             0     0     0     0     0    0     0     0     0      0\n",
+      "2            21    31   113    33    29   12   106    52    54    451\n",
+      "3             1     0     0     4     0    0     3     0     0      8\n",
+      "4           390   438   821   650  2508  255  1809  1150  1761   9782\n",
+      "5             0     0     0     0     0    0     0     0     0      0\n",
+      "6          1128   924  2276  1681  2561  570  6636  2151  3372  21299\n",
+      "7             0     0     0     0     0    0     0     0     0      0\n",
+      "8            40    23    61    29    94   19    85    74   123    548\n",
+      "Total      1580  1416  3271  2397  5192  856  8639  3427  5310  32088\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarize_predictions(mnlogbasescaled_pred_train, mnlogbasescaled_pred_test)\n",
+    "print('\\n')\n",
+    "mnlogbasescaled_cmat_train = make_conf_matrix(mnlogbasescaled_pred_train, y_train)\n",
+    "mnlogbasescaled_cmat_test = make_conf_matrix(mnlogbasescaled_pred_test, y_test)\n",
+    "print(\n",
+    "    'The training and test confusion matrices for the model are:\\n\\n'\\\n",
+    "    'TRAINING\\n\\n{}\\n\\n\\nTEST\\n\\n{}\\n'.format(\n",
+    "        mnlogbasescaled_cmat_train,\n",
+    "        mnlogbasescaled_cmat_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=100000, class_weight='balanced', dual=False,\n",
+      "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+      "                   max_iter=1000, multi_class='multinomial', n_jobs=None,\n",
+      "                   penalty='l2', random_state=20, solver='lbfgs', tol=0.0001,\n",
+      "                   verbose=0, warm_start=False)\n",
+      "\n",
+      "The resulting training and test accuracy scores are:\n",
+      "\n",
+      "Training\t0.2107\n",
+      "TEST\t\t0.2136\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "solver = 'lbfgs'\n",
+    "C = 100000\n",
+    "max_iter = 1000\n",
+    "\n",
+    "# fit a model again as multinomial for comparison of results\n",
+    "multi_class='multinomial'\n",
+    "class_weight='balanced'\n",
+    "\n",
+    "MNLogBaseScaledBal = LogisticRegression(\n",
+    "    C=C,\n",
+    "    solver=solver,\n",
+    "    max_iter=max_iter,\n",
+    "    multi_class=multi_class,\n",
+    "    random_state=20,\n",
+    "    class_weight=class_weight\n",
+    ").fit(X_train_scaled[cols], y_train)\n",
+    "\n",
+    "mnlogbasescaledbal_score_train = MNLogBaseScaledBal.score(X_train_scaled[cols], y_train)\n",
+    "mnlogbasescaledbal_score_test = MNLogBaseScaledBal.score(X_test_scaled[cols], y_test)\n",
+    "mnlogbasescaledbal_pred_train = MNLogBaseScaledBal.predict(X_train_scaled[cols])\n",
+    "mnlogbasescaledbal_pred_test = MNLogBaseScaledBal.predict(X_test_scaled[cols])\n",
+    "\n",
+    "print(MNLogBaseScaledBal)\n",
+    "print()\n",
+    "print(\n",
+    "    'The resulting training and test accuracy scores are:\\n\\n'\\\n",
+    "    'Training\\t{0:.4f}\\nTEST\\t\\t{1:.4f}\\n'.format(\n",
+    "        mnlogbasescaledbal_score_train,\n",
+    "        mnlogbasescaledbal_score_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of classes predicted by class for both the training and test sets are:\n",
+      "\n",
+      "TRAINING\n",
+      "Class\tProportion\tPredictions\n",
+      "0\t0.1238\t\t15,890\n",
+      "1\t0.1254\t\t16,091\n",
+      "2\t0.1264\t\t16,227\n",
+      "3\t0.0479\t\t6,143\n",
+      "4\t0.3443\t\t44,198\n",
+      "5\t0.0363\t\t4,661\n",
+      "6\t0.1608\t\t20,645\n",
+      "7\t0.0275\t\t3,536\n",
+      "8\t0.0075\t\t961\n",
+      "\n",
+      "TEST\n",
+      "Class\tProportion\tPredictions\n",
+      "0\t0.1210\t\t3,882\n",
+      "1\t0.1261\t\t4,047\n",
+      "2\t0.1259\t\t4,040\n",
+      "3\t0.0475\t\t1,524\n",
+      "4\t0.3470\t\t11,135\n",
+      "5\t0.0358\t\t1,148\n",
+      "6\t0.1612\t\t5,174\n",
+      "7\t0.0281\t\t903\n",
+      "8\t0.0073\t\t235\n",
+      "\n",
+      "\n",
+      "The training and test confusion matrices for the model are:\n",
+      "\n",
+      "TRAINING\n",
+      "\n",
+      "Actual        0     1      2     3      4     5      6      7      8   Total\n",
+      "Predicted                                                                   \n",
+      "0          1470   614   1521  1236   1848   438   4547   1543   2673   15890\n",
+      "1           716  1149   1628  1331   2325   384   4417   1817   2324   16091\n",
+      "2           675   669   2975  1041   2020   417   4225   1568   2637   16227\n",
+      "3           211   271    700   632    985   110   1640    674    920    6143\n",
+      "4          1618  1881   3721  2963  10873  1267   8315   5365   8195   44198\n",
+      "5           266   229    442   295    694   163   1137    651    784    4661\n",
+      "6          1149   676   1640  1797   1312   541   9092   1450   2988   20645\n",
+      "7           165   141    401   238    525    76    904    530    556    3536\n",
+      "8            51    34     54    54    185    27    278    112    166     961\n",
+      "Total      6321  5664  13082  9587  20767  3423  34555  13710  21243  128352\n",
+      "\n",
+      "\n",
+      "TEST\n",
+      "\n",
+      "Actual        0     1     2     3     4    5     6     7     8  Total\n",
+      "Predicted                                                            \n",
+      "0           345   130   372   273   476   90  1139   391   666   3882\n",
+      "1           200   290   415   357   598   97  1061   490   539   4047\n",
+      "2           167   191   736   266   438  120  1068   371   683   4040\n",
+      "3            44    57   175   163   248   38   386   173   240   1524\n",
+      "4           444   481   957   726  2775  281  2115  1295  2061  11135\n",
+      "5            65    67    98    83   182   45   257   151   200   1148\n",
+      "6           263   145   418   449   303  151  2314   385   746   5174\n",
+      "7            41    42    94    65   129   26   226   145   135    903\n",
+      "8            11    13     6    15    43    8    73    26    40    235\n",
+      "Total      1580  1416  3271  2397  5192  856  8639  3427  5310  32088\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarize_predictions(mnlogbasescaledbal_pred_train, mnlogbasescaledbal_pred_test)\n",
+    "print('\\n')\n",
+    "mnlogbasescaledbal_cmat_train = make_conf_matrix(mnlogbasescaledbal_pred_train, y_train)\n",
+    "mnlogbasescaledbal_cmat_test = make_conf_matrix(mnlogbasescaledbal_pred_test, y_test)\n",
+    "print(\n",
+    "    'The training and test confusion matrices for the model are:\\n\\n'\\\n",
+    "    'TRAINING\\n\\n{}\\n\\n\\nTEST\\n\\n{}\\n'.format(\n",
+    "        mnlogbasescaledbal_cmat_train,\n",
+    "        mnlogbasescaledbal_cmat_test\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MODEL 3: Fit a multi-class multiple Logistic regression model using ALL predictors"
    ]
   },
   {
